# exercism

./: .gitmodules  README.MD  main  main.rs  main.s
cpp/: Ajuda1.cpp  Ajuda2.cpp  Ajuda3.cpp  Ajuda4.cpp  heap_p.c  listacircular1.cpp  magic.cpp
cpp/Linear Algebra/: functions.hpp  main.cpp  tests  tests.cpp
cpp/MatDiscreta/: .gitignore  CMakeLists.txt
cpp/arvore/: Arvore  CMakeLists.txt  arvore.hpp  build.sh  mainTest.cpp
cpp/grafo/: CMakeLists.txt  main.cpp
cpp/openGL/: .gitignore  CMakeLists.txt
cpp/openGL/shaders/: fragment.frag  vertex.vert
cpp/openGL/src/: Shader.cpp  Shader.h  Texture.cpp  Texture.h  glad.c  main.cpp
cpp/openGL/src/glad/: glad.h
cpp/ordenacao/: BubbleSort.h  CountingSort.h  CountingSortBorken.cpp  InsertionSort.h  MergeSort.h  QuickSort.cpp  RadixSort.h  SelectionSort.h  Tests.cpp
cpp/p1/: ListaCircular.cpp  ListaDuplamenteEncadeada.cpp  P1NicolasEDA.cpp
cpp/questao1/: CMakeLists.txt  main.cpp
java/: README.MD
java/Java Socket Exemples/: Client.java  Server.java
java/P2 POO/: DataBase.java  Dispath.java  Principal.java  Quadrado.java  Test.java
java/PerguntasDeEntrevistas/: .gitignore  README.MD
matematica discreta/: Questao4.c  diferenca.c  intercessao.c  uniao.c  uniao_disjunta.c
python/: AdditivePersistence.py  AdivinheONumero.py  CifraCesar.py  DesenhaMoldura.py  DivisorDeMaterias2020.py  ForcaJogo.py  JogodaVelha.py  JogodeCraps.py  NearestPrimeNumbers.py  OReinoDoDragao.py  Perfectlybalanced.py  README.MD  addingonetoeachdigit.py  covertTimeFormat.py
rust/: README.MD
shell/: lista 2 exercicios.md
(+346 files in other folders)
